Update HanoiEngine.java